Replaced immutable collection with factory call